--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <div class="card-body">
-    <form th:action="@{/login}" method="post" role="form" class="text-start">
+    <form th:action="@{/login}" method="post" authority="form" class="text-start">
         <div th:if="${param.error}" class="text-danger font-weight-bold">
-           Bad credential broski
+Invalid login/password
         </div>
         <div class="input-group input-group-outline my-3">
             <label class="form-label">Email</label>
@@ -25,10 +25,6 @@
         <div class="text-center">
             <button type="submit" class="btn bg-gradient-primary w-100 my-4 mb-2">Login</button>
         </div>
-<!--        <p class="mt-4 text-sm text-center">-->
-<!--            Забыли пароль? <a href="register">Восстановить пароль</a><br>-->
-<!--            <a href="register"></a>-->
-<!--        </p>-->
     </form>
 </div>
 </body>
