--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Authorisation</title>
+    <link href="/style.css">
 </head>
 <body>
 <div class="card-body">
     <form th:action="@{/login}" method="post" authority="form" class="text-start">
         <div th:if="${param.error}" class="text-danger font-weight-bold">
-Invalid login/password
+        Invalid login/password
         </div>
         <div class="input-group input-group-outline my-3">
             <label class="form-label">Email</label>
