--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -22,10 +22,10 @@
     <!-- CSS Files -->
     <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
-<body style="background-color: #14002b">
+<body style="background-color: white">
 <div th:replace="fragments/header :: header"></div>
 <!--style="background-image: url('images/login_background4.jpg');"-->
-<div class="container my-auto" style="position:relative; left:50px; top:80px;">
+<div class="container my-auto" style="position:relative; left:35px; top:80px;">
     <div class="row">
         <div class="col-lg-4 col-md-8 col-12 mx-auto">
             <div class="card z-index-0 fadeIn3 fadeInBottom">
