ui changes in login, home, footer, and header.

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -23,8 +23,7 @@
     <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body style="background-color: white">
-<div th:replace="fragments/header :: header"></div>
-<!--style="background-image: url('images/login_background4.jpg');"-->
+<div th:replace="fragments/header_login :: header"></div>
 <div class="container my-auto" style="position:relative; left:35px; top:80px;">
     <div class="row">
         <div class="col-lg-4 col-md-8 col-12 mx-auto">
