changes in home controller and home view

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -35,7 +35,7 @@
                     <p class="card-text" th:text="${company.getEmail()}"></p>
                     <p class="card-text" th:text="${company.getWebsite()}"></p>
                    <div>
-                       <a class="active" th:href="@{/company/{id}/eemployees/}" th:text="Employees" style="color: darkblue"></a>
+                       <a class="active" th:href="@{/companies/company/{id}/eemployees/}" th:text="Employees" style="color: darkblue"></a>
                    </div>
                 </div>
             </div>
