--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome to company-employees-crm service</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/static/css/login.css"/>
+    <title>
+        Company Employee CRM Log in Form
+    </title>
+    <!--     Bootstrap icons     -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <!--     Fonts and icons     -->
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <!-- Nucleo Icons -->
+    <link href="css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="css/nucleo-svg.css" rel="stylesheet"/>
+    <link ref="stylesheet" href="/css/cards.css">
+    <!-- Font Awesome Icons -->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <!-- CSS Files -->
+    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
-<h1>Welcome to the homepage</h1>
+<div th:replace="fragments/header :: header"></div>
+<div class="container">
+    <div class="row">
+        <div class="col card-deck ml-5 my-3" th:if="${!companies.isEmpty()}">
+            <div class="card" th:each="company : ${companies}">
+                <div class="card-body">
+                    <img src="logo_google.png">
+                    <h4 class="card-text" th:text="${company.getName()}"></h4>
+                    <p class="card-text" th:text="${company.getEmail()}"></p>
+                    <p class="card-text" th:text="${company.getWebsite()}"></p>
+                   <div>
+                       <a class="active" th:href="@{/companies/company/{id}/eemployees/}" th:text="Employees" style="color: darkblue"></a>
+                   </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
+<div th:replace="fragments/footer :: footer">
+</div>
 </html>
