--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,20 +7,13 @@
     <title>
         Company Employee CRM Log in Form
     </title>
-    <!--     Bootstrap icons     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <!--     Fonts and icons     -->
-    <link rel="stylesheet" type="text/css"
-          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <!-- Nucleo Icons -->
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
     <link href="css/nucleo-icons.css" rel="stylesheet"/>
     <link href="css/nucleo-svg.css" rel="stylesheet"/>
     <link ref="stylesheet" href="/css/cards.css">
-    <!-- Font Awesome Icons -->
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <!-- CSS Files -->
     <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
@@ -30,12 +23,14 @@
         <div class="col card-deck ml-5 my-3" th:if="${!companies.isEmpty()}">
             <div class="card" th:each="company : ${companies}">
                 <div class="card-body">
-                    <img src="logo_google.png">
-                    <h4 class="card-text" th:text="${company.getName()}"></h4>
+                    <a th:href="@{'/companies/'+ ${company.getId()} + '/'}">
+                        <img src="/images/logo_google.png" >
+                    </a>
+                    <h4 class="card-text" th:text="${company.getName() }"></h4>
                     <p class="card-text" th:text="${company.getEmail()}"></p>
                     <p class="card-text" th:text="${company.getWebsite()}"></p>
                    <div>
-                       <a class="active" th:href="@{/companies/company/{id}/eemployees/}" th:text="Employees" style="color: darkblue"></a>
+                       <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}" th:text="Employees" style="color: darkblue"></a>
                    </div>
                 </div>
             </div>
