--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/static/css/login.css"/>
+    <title>
+        company page
+    </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <link href="css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="css/nucleo-svg.css" rel="stylesheet"/>
+    <link ref="stylesheet" href="/css/cards.css">
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
 <div class="row">
-  <div class="col card-deck ml-5 my-3" th:if="${!company.isEmpty()}">
-    <div class="card">
-      <div class="card-body">
-        <img src="/images/logo_google.png">
-        <h3 class="card-text" th:text="${company.get().getName()}"></h3>
-        <p class="card-text" th:text="${company.get().getEmail()}"></p>
-        <p class="card-text" th:text="${company.get().getWebsite()}"></p>
-        <div>
-          <a class="active" th:href="@{'/companies/'+ ${company.get().getEmployees()} + '/employees/'}" th:text="Employees" style="color: darkblue"></a>
+    <div class="col card-deck ml-5 my-3" th:if="${!company.isEmpty()}">
+        <div class="card">
+            <div class="card-body">
+                <img src="/images/logo_google.png">
+                <h3 class="card-text" th:text="${company.get().getName()}"></h3>
+                <p class="card-text" th:text="${company.get().getEmail()}"></p>
+                <p class="card-text" th:text="${company.get().getWebsite()}"></p>
+                <div>
+                    <a class="active" th:href="@{'/companies/'+ ${company.get().getId()} + '/employees/'}"
+                       th:text="Employees" style="color: darkblue"></a>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="submit-btn" sec:authorize="(hasAuthority('ROLE_ADMIN'))">Add</div>
+        <div class="btn-github" sec:authorize="(hasAuthority('ROLE_ADMIN'))">Edit</div>
+        <div class="btn-danger" sec:authorize="(hasAuthority('ROLE_ADMIN'))">Delete</div>
     </div>
-  </div>
 </div>
 </body>
 </html>
