--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -22,10 +22,7 @@
             <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item" style="position:relative; left:45px;" >
-                        <a href="/companies/" th:text="Companies" style="color: white"></a>
-                    </li>
-                    <li class="nav-item" style="position:relative; left:65px;">
-                        <a class="active" th:href="@{/employees}" th:text="Employees" style="color: white"></a>
+                        <a href="/companies" th:text="Companies" style="color: white"></a>
                     </li>
                     <li class="nav-item" style="position: relative; left:85px;">
                         <a class="active" th:href="@{/login}" th:text="Admin" style="color: white"></a>
