--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="http://schema.org/WebPage">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,19 +7,13 @@
     <title>
         Company Employee CRM Log in Form
     </title>
-    <!--     Bootstrap icons     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <!--     Fonts and icons     -->
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <!-- Nucleo Icons -->
     <link href="css/nucleo-icons.css" rel="stylesheet"/>
     <link href="css/nucleo-svg.css" rel="stylesheet"/>
-    <!-- Font Awesome Icons -->
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    <!-- Material Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <!-- CSS Files -->
     <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body style="background-color: white">
@@ -39,11 +33,11 @@
                             Invalid Email/Password
                         </div>
                         <div class="input-group input-group-outline my-3">
-                            <label class="form-label">Email</label>
-                            <input type="text" id="login" name="email" class="form-control">
+                            <label class="form-label"></label>
+                            <input type="text" id="login" name="login" class="form-control">
                         </div>
                         <div class="input-group input-group-outline mb-3">
-                            <label class="form-label">Password</label>
+                            <label class="form-label"></label>
                             <input type="password" id="entry" name="entry" class="form-control">
                         </div>
                         <div class="form-check form-switch d-flex align-items-center mb-3">
@@ -53,9 +47,6 @@
                         <div class="text-center">
                             <button type="submit" class="btn bg-gradient-success w-100 my-4 mb-2">Login</button>
                         </div>
-                        <p class="mt-4 text-sm text-center">
-                            Forgot password? <a href="register">Recover</a><br>
-                        </p>
                         <p class="mt-4 text-sm text-center">
                             Not an admin? <a href="home.html">Home page</a><br>
                         </p>
