--- a/src/main/resources/templates/companies.html
+++ b/src/main/resources/templates/companies.html
@@ -8,7 +8,8 @@
         Company Employee CRM Log in Form
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
     <link href="css/nucleo-icons.css" rel="stylesheet"/>
     <link href="css/nucleo-svg.css" rel="stylesheet"/>
     <link ref="stylesheet" href="/css/cards.css">
@@ -23,14 +24,15 @@
         <div class="col card-deck ml-5 my-3" style="color: gray" th:if="${!companies.isEmpty()}">
             <div class="card" th:each="company : ${companies}">
                 <div class="card-body">
-                    <a th:href="@{'/companies/'+ ${company.getId()} + '/'}">
-                        <img src="/images/logo_google.png" >
-                    </a>
-                    <h4 class="card-text" th:text="${company.getName() }"></h4>
+                    <div>
+                        <a class="active" th:href="@{'/companies/'+ ${company.getId()}}"
+                           th:text="${company.getName()}" style="color: darkblue"></a>
+                    </div>
                     <p class="card-text" th:text="${company.getEmail()}"></p>
                     <p class="card-text" th:text="${company.getWebsite()}"></p>
                     <div>
-                        <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}" th:text="Employees" style="color: darkblue"></a>
+                        <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}"
+                           th:text="Employees" style="color: darkblue"></a>
                     </div>
                 </div>
             </div>
