--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,18 +20,20 @@
 <div th:replace="fragments/header :: header"></div>
 <div class="container">
     <div class="row">
-        <div class="col card-deck ml-5 my-3" th:if="${!companies.isEmpty()}">
+        <div class="col card-deck ml-5 my-3" style="color: gray" th:if="${!companies.isEmpty()}">
             <div class="card" th:each="company : ${companies}">
                 <div class="card-body">
-                    <a th:href="@{'/companies/'+ ${company.getId()} + '/'}">
-                        <img src="/images/logo_google.png" >
-                    </a>
-                    <h4 class="card-text" th:text="${company.getName() }"></h4>
+                    <!--                    <img src="/images/logo_google.png">-->
+                    <div>
+                        <a class="active" th:href="@{'/companies/'+ ${company.getId()}}"
+                           th:text="${company.getName()}" style="color: darkblue"></a>
+                    </div>
                     <p class="card-text" th:text="${company.getEmail()}"></p>
                     <p class="card-text" th:text="${company.getWebsite()}"></p>
-                   <div>
-                       <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}" th:text="Employees" style="color: darkblue"></a>
-                   </div>
+                    <div>
+                        <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}"
+                           th:text="Employees" style="color: darkblue"></a>
+                    </div>
                 </div>
             </div>
         </div>
