--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -4,9 +4,6 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/static/css/login.css"/>
-    <title>
-        company page
-    </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
@@ -18,6 +15,7 @@
     <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 <div class="row">
     <div class="col card-deck ml-5 my-3" th:if="${!company.isEmpty()}">
         <div class="card">
@@ -34,8 +32,8 @@
         </div>
         <a class="submit-btn" href="http://localhost:8089/company/add">Add</a>
         <a class="active" th:with="companyId=${companyId}"
-           th:href="@{'http://localhost:8089/companies/'+${company.get().getId()}}">Edit</a>
-        <a class="btn-danger" th:href="@{'/companies/'+${company.get().getId()}+'/delete'}">Delete</a>
+           th:href="@{'/companies/'+ ${companyId} + '/edit'}">Edit</a>
+        <a class="btn-danger" th:href="@{'/companies/'+${companyId}+'/delete'}">Delete</a>
     </div>
 </div>
 </body>
