--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -4,11 +4,9 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="/static/css/login.css"/>
-  <title>
-    employees page
-  </title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+  <link rel="stylesheet" type="text/css"
+        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
   <link href="css/nucleo-icons.css" rel="stylesheet"/>
   <link href="css/nucleo-svg.css" rel="stylesheet"/>
   <link ref="stylesheet" href="/css/cards.css">
@@ -17,6 +15,7 @@
   <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
+<div th:replace="fragments/header :: header"></div>
 <div class="container">
   <div class="row">
     <div class="col card-deck ml-5 my-3" th:if="${!employees.isEmpty()}">
