--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/static/css/login.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css"
-          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
     <link href="css/nucleo-icons.css" rel="stylesheet"/>
     <link href="css/nucleo-svg.css" rel="stylesheet"/>
     <link ref="stylesheet" href="/css/cards.css">
@@ -20,7 +19,6 @@
     <div class="col card-deck ml-5 my-3" th:if="${!company.isEmpty()}">
         <div class="card">
             <div class="card-body">
-                <img src="/images/logo_google.png">
                 <h3 class="card-text" th:text="${company.get().getName()} "></h3>
                 <p class="card-text" th:text="${company.get().getEmail()}"></p>
                 <p class="card-text" th:text="${company.get().getWebsite()}"></p>
