--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="/static/css/login.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
     <link href="css/nucleo-icons.css" rel="stylesheet"/>
     <link href="css/nucleo-svg.css" rel="stylesheet"/>
     <link ref="stylesheet" href="/css/cards.css">
@@ -20,7 +21,6 @@
         <div class="col card-deck ml-5 my-3" style="color: gray" th:if="${!companies.isEmpty()}">
             <div class="card" th:each="company : ${companies}">
                 <div class="card-body">
-                    <!--                    <img src="/images/logo_google.png">-->
                     <div>
                         <a class="active" th:href="@{'/companies/'+ ${company.getId()}}"
                            th:text="${company.getName()}" style="color: darkblue"></a>
