--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,33 +26,46 @@
                 </div>
                 <div class="card-body">
                     <form th:action="@{/login}" method="post" role="form" class="text-start">
+
                         <div th:if="${param.error}" class="text-danger font-weight-bold">
                             Invalid Email/Password
                         </div>
+
+
                         <div class="input-group input-group-outline my-3">
                             <label class="form-label"></label>
                             <input type="text" id="login" name="login" class="form-control">
                         </div>
+
+
                         <div class="input-group input-group-outline mb-3">
                             <label class="form-label"></label>
                             <input type="password" id="entry" name="entry" class="form-control">
                         </div>
+
+
                         <div class="form-check form-switch d-flex align-items-center mb-3">
                             <input class="form-check-input" type="checkbox" id="rememberMe">
                             <label class="form-check-label mb-0 ms-2" for="rememberMe">Remember me</label>
                         </div>
+
+
                         <div class="text-center">
                             <button type="submit" class="btn bg-gradient-success w-100 my-4 mb-2">Login</button>
                         </div>
+
+
                         <p class="mt-4 text-sm text-center">
                             Not an admin? <a href="home.html">Home page</a><br>
                         </p>
+
+
                     </form>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!--<div th:replace="fragments/footer :: footer"></div>-->
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
