fixes in views, added logo and logo path to company entity

--- a/src/main/resources/templates/edit_company.html
+++ b/src/main/resources/templates/edit_company.html
@@ -56,7 +56,7 @@
 
                         <div class="text-center">
                             <button type="submit" class="btn bg-gradient-success 40 my-4 mb-2">Edit</button>
-                            <button type="reset" class="btn bg-gradient-success 40 my-4 mb-2">Reset</button>
+                            <button type="reset" class="btn bg-gradient-faded-danger 40 my-4 mb-2">Reset</button>
                         </div>
                     </form>
                 </div>
