--- a/src/main/resources/templates/companies.html
+++ b/src/main/resources/templates/companies.html
@@ -1,73 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-<!--    <meta charset="utf-8"/>-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-<!--    <link rel="stylesheet" href="/static/css/login.css"/>-->
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">-->
-<!--    <link rel="stylesheet" type="text/css"-->
-<!--          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>-->
-<!--    <link href="/css/nucleo-icons.css" rel="stylesheet"/>-->
-<!--    <link href="/css/nucleo-svg.css" rel="stylesheet"/>-->
-<!--    <link rel="stylesheet" href="/css/cards.css">-->
-<!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
-<!--    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">-->
-<!--    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>-->
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/static/css/login.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/cards.css">
-</head>
-<header>
-  <span class="siteTitle">title</span>
-</header>
-<body>
-<main>
-    <a href="https://google.com" class="card">
-        <div class="inner">
-            <h2 class="title">Mit 117 Sachen durch Klugheimschen Basaltgebirge</h2>
-        </div>
-    </a>
-
-    <a href="https://google.com" class="card card2">
-        <div class="inner">
-            <h2 class="title">Mit 117 Sachen durch Klugheimschen Basaltgebirge</h2>
-        </div>
-    </a>
-
-    <a href="https://google.com" class="card card3">
-        <div class="inner">
-            <h2 class="title">Mit 117 Sachen durch Klugheimschen Basaltgebirge</h2>
-        </div>
-    </a>
-    <main>
-
-        <footer>
-            <a class="footerLink" href="/impressum">Datenschutz</a>
-            <a class="footerLink" href="/impressum">Impressum</a>
-        </footer>
-    </main>
-</main>
-</body>
-</html>
-
-<!DOCTYPE html>
-<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
-<head>
-
-<!--    <meta charset="utf-8"/>-->
-<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
-<!--    <link rel="stylesheet" href="/static/css/login.css"/>-->
-<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">-->
-<!--    <link rel="stylesheet" type="text/css"-->
-<!--          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>-->
-<!--    <link href="/css/nucleo-icons.css" rel="stylesheet"/>-->
-<!--    <link href="/css/nucleo-svg.css" rel="stylesheet"/>-->
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 <!--    <link rel="stylesheet" href="/css/cards.css">-->
-<!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
-<!--    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">-->
-<!--    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>-->
-    <link rel="stylesheet" href="/css/cards.css">
+    <title></title>
 </head>
 <body>
+
 <div th:replace="fragments/header :: header"></div>
+
 <div class="container">
     <div class="row">
         <div class="col card-deck ml-5 my-3" style="color: gray" th:if="${!companies.isEmpty()}">
@@ -88,7 +40,10 @@
         </div>
     </div>
 </div>
+
 </body>
+
 <div th:replace="fragments/footer :: footer">
 </div>
+
 </html>
