--- a/src/main/resources/static/css/material-kit.css
+++ b/src/main/resources/static/css/material-kit.css
@@ -1,4 +1,4 @@
-/*!
+/*/
  * Bootstrap v5.1.3 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
  * Copyright 2011-2021 Twitter, Inc.
@@ -5620,7 +5620,7 @@ fieldset:disabled .btn {
 .card-body {
   flex: 1 1 auto;
   padding: 1rem 1rem;
-  height: 500px;
+  height: 400px;
 }
 
 .card-title {
@@ -19840,7 +19840,7 @@ fieldset:disabled .btn {
   }
 }
 
-/*!
+/*/
 
 =========================================================
 * Material Kit - v3.0.2
