--- a/src/main/resources/templates/add_company.html
+++ b/src/main/resources/templates/add_company.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/login.css"/>
+    <link rel="stylesheet" href="/css/login.css"/>
     <title>
         Company Employee CRM Log in Form
     </title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="css/nucleo-svg.css" rel="stylesheet"/>
-    <link ref="stylesheet" href="/css/cards.css">
+    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
+    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -30,7 +30,7 @@
                             <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Add Company</h4>
                         </div>
                     </div>
-                    <div class="card-body">
+                    <div class="card__body">
                         <form th:action="@{post}" th:object="${company}" method="post" enctype="multipart/form-data">
                             <fieldset>
                                 <div class="font-weight-normal mb-3">
