--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -3,37 +3,91 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/login.css"/>
+    <link rel="stylesheet" href="/css/login.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
     <link href="/css/nucleo-icons.css" rel="stylesheet"/>
     <link href="/css/nucleo-svg.css" rel="stylesheet"/>
-    <link ref="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
+    <title>Company</title>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
 <div class="row">
-    <div class="col card-deck ml-5 my-3" th:if="${!company.isEmpty()}">
+    <div class="container" style="position: relative; right: -30%; top: -10%" th:if="${!company.isEmpty()}">
         <div class="card">
-            <div class="card-body">
-                <h3 class="card-text" th:text="${company.get().getName()} "></h3>
+            <div class="card__body">
+                <div class="card-text">
+                    <a th:text="${company.get().getName()}"></a>
+                </div>
                 <p class="card-text" th:text="${company.get().getEmail()}"></p>
                 <p class="card-text" th:text="${company.get().getWebsite()}"></p>
-                <div>
+                <div class="card-text">
                     <a class="active" th:href="@{'/companies/'+ ${company.get().getId()} + '/employees/'}"
-                       th:text="Employees" style="color: darkblue"></a>
+                       th:text="Employees" style="color: black"></a>
+                </div>
+                <div class="text-center">
+                    <div>
+                        <a class="btn btn-success"
+                           th:text="'Add Employee'"
+                           th:href="@{'/companies/'+${company.get().getId()}+'/employee/add'}">
+                        </a>
+                    </div>
+
+                    <div class="btn btn-danger">
+                        <a class="btn btn-danger"
+                           th:href="@{'/companies/'+${company.get().getId()}+'/delete'}">Delete
+                        </a>
+                    </div>
+
+                    <div>
+                        <a class="btn btn-dark"
+                           th:href="@{'/companies/'+${company.get().getId()}+'/edit'}">Edit
+                        </a>
+                    </div>
+
                 </div>
             </div>
         </div>
-        <a class="submit-btn" th:text="'Create'+'Employee'" th:href="@{'/companies/'+${companyId}+'/employee/add'}"></a>
-        <a class="active" th:with="companyId=${companyId}"
-           th:href="@{'/companies/'+${companyId}+'/edit'}">Edit</a>
-        <a class="btn-danger" th:href="@{'/companies/'+${companyId}+'/delete'}">Delete</a>
     </div>
+
+    <!--    <div class="container" th:if="${!company.isEmpty()}">-->
+    <!--        <div class="card">-->
+    <!--            <div class="card__body">-->
+    <!--                <h3 class="card-text-header" th:text="${company.get().getName()}"></h3>-->
+    <!--                <p class="card-text" th:text="'Contact: '+${company.get().getEmail()}"></p>-->
+    <!--                <p class="card-text" th:text="'Website: '+${company.get().getWebsite()}"></p>-->
+
+    <!--                <div>-->
+    <!--                    <a class="active" th:href="@{'/companies/'+ ${company.get().getId()} + '/employees/'}"-->
+    <!--                       th:text="Employees" style="color: darkblue"></a>-->
+    <!--                </div>-->
+    <!--            </div>-->
+    <!--            <div class="text-center">-->
+    <!--                <div>-->
+    <!--                    <a class="btn btn-success" style="size: 30px"-->
+    <!--                       th:text="'Add Employee'"-->
+    <!--                       th:href="@{'/companies/'+${company.get().getId()}+'/employee/add'}">-->
+    <!--                    </a>-->
+    <!--                </div>-->
+    <!--                <div>-->
+    <!--                    <a class="btn btn-danger" style="size: 30px"-->
+    <!--                       th:href="@{'/companies/'+${company.get().getId()}+'/delete'}">Delete-->
+    <!--                    </a>-->
+    <!--                </div>-->
+    <!--                <div>-->
+    <!--                    <a class="btn btn-dark" style="size: 30px"-->
+    <!--                            th:href="@{'/companies/'+${company.get().getId()}+'/edit'}">Edit-->
+    <!--                    </a>-->
+    <!--                </div>-->
+
+    <!--            </div>-->
+    <!--        </div>-->
+</div>
 </div>
 </body>
 </html>
