--- a/src/main/resources/templates/edit_company.html
+++ b/src/main/resources/templates/edit_company.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/login.css"/>
+    <link rel="stylesheet" href="/css/login.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
     <link href="/css/nucleo-icons.css" rel="stylesheet"/>
     <link href="/css/nucleo-svg.css" rel="stylesheet"/>
-    <link ref="stylesheet" href="/css/cards.css">
+    <link rel="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
@@ -19,8 +19,9 @@
 </head>
 <body style="background-color: white">
 <div th:replace="fragments/header :: header"></div>
-<div class="container my-auto" style="position:relative; left:35px; top:80px;">
+<div class="container" style="position:relative; left: 25%; top:10%;">
     <div class="row">
+
         <div class="col-lg-4 col-md-8 col-12 mx-auto">
             <div class="card z-index-0 fadeIn3 fadeInBottom">
                 <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2" style="background-color: #0d376f">
@@ -28,7 +29,8 @@
                         <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Edit</h4>
                     </div>
                 </div>
-                <div class="card-body">
+
+                <div class="card__body">
                     <form th:object="${company}" th:action="@{'/companies/'+${companyId}+'/update'}" method="POST"
                           role="form"
                           class="text-start" enctype="multipart/form-data">
@@ -64,10 +66,7 @@
         </div>
     </div>
 </div>
-
-
-</div>
-<div th:replace="fragments/footer :: footer"></div>
+<!--<div th:replace="fragments/footer :: footer"></div>-->
 </body>
 </html>
 
