--- a/src/main/resources/templates/edit_employee.html
+++ b/src/main/resources/templates/edit_employee.html
@@ -1,79 +1,80 @@
 <!DOCTYPE html>
 <html lang="en" itemscope itemtype="https://schema.org/WebPage">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="/static/css/login.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" type="text/css"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-  <link href="/css/nucleo-icons.css" rel="stylesheet"/>
-  <link href="/css/nucleo-svg.css" rel="stylesheet"/>
-  <link ref="stylesheet" href="/css/cards.css">
-  <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-  <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
-  <title>
-    Edit page
-  </title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/css/login.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/css/cards.css">
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
+    <title>
+        Edit page
+    </title>
 </head>
 <body style="background-color: white">
 <div th:replace="fragments/header :: header"></div>
-<div class="container my-auto" style="position:relative; left:35px; top:80px;">
-  <div class="row">
-    <div class="col-lg-4 col-md-8 col-12 mx-auto">
-      <div class="card z-index-0 fadeIn3 fadeInBottom">
-        <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2" style="background-color: #0d376f">
-          <div class="bg-gradient-info shadow-primary border-radius-lg py-3 pe-1">
-            <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Edit</h4>
-          </div>
+<div class="container" style="position:relative; left:25%; top:10%;">
+    <div class="row">
+
+        <div class="col-lg-4 col-md-8 col-12 mx-auto">
+            <div class="card z-index-0 fadeIn3 fadeInBottom">
+                <div class="card-header p-0 position-relative mt-n4 mx-3 z-index-2" style="background-color: #0d376f">
+                    <div class="bg-gradient-info shadow-primary border-radius-lg py-3 pe-1">
+                        <h4 class="text-white font-weight-bolder text-center mt-2 mb-0">Edit</h4>
+                    </div>
+                </div>
+
+                <div class="card__body">
+                    <form th:object="${employee}"
+                          th:action="@{'/companies/'+${companyId}+'/employees/'+${employeeId}+'/update'}" method="POST"
+                          role="form"
+                          class="text-start" enctype="multipart/form-data">
+
+                        <div class="input-group input-group-outline my-3">
+                            <label class="form-label"></label>
+                            <input type="text" id="name" name="name" th:field="${employee.name}"
+                                   th:value="${employee.getName()}"
+                                   class="form-control">
+                        </div>
+
+                        <div class="input-group input-group-outline mb-3">
+                            <label class="form-label"></label>
+                            <input type="text" id="surname" name="surname" th:field="${employee.surname}"
+                                   th:value="${employee.getSurname()}"
+                                   class="form-control">
+                        </div>
+
+                        <div class="input-group input-group-outline mb-3">
+                            <label class="form-label"></label>
+                            <input type="email" id="email" name="email" th:field="${employee.email}"
+                                   th:value="${employee.getEmail()}"
+                                   class="form-control">
+                        </div>
+
+                        <div class="input-group input-group-outline mb-3">
+                            <label class="form-label"></label>
+                            <input type="text" id="website" name="website" th:field="${employee.phone_number}"
+                                   th:value="${employee.getPhone_number()}"
+                                   class="form-control">
+                        </div>
+
+                        <div class="text-center">
+                            <button type="submit" class="btn bg-gradient-success 40 my-4 mb-2">Edit</button>
+                            <button type="reset" class="btn bg-gradient-faded-danger 40 my-4 mb-2">Reset</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div class="card-body">
-          <form th:object="${employee}" th:action="@{'/companies/'+${companyId}+'/employees/'+${employeeId}+'/update'}" method="POST"
-                role="form"
-                class="text-start" enctype="multipart/form-data">
-
-            <div class="input-group input-group-outline my-3">
-              <label class="form-label"></label>
-              <input type="text" id="name" name="name" th:field="${employee.name}"
-                     th:value="${employee.getName()}"
-                     class="form-control">
-            </div>
-
-            <div class="input-group input-group-outline mb-3">
-              <label class="form-label"></label>
-              <input type="email" id="surname" name="surname" th:field="${employee.surname}"
-                     th:value="${employee.getSurname()()}"
-                     class="form-control">
-            </div>
-
-            <div class="input-group input-group-outline mb-3">
-              <label class="form-label"></label>
-              <input type="email" id="email" name="email" th:field="${employee.email}"
-                     th:value="${employee.getEmail()}"
-                     class="form-control">
-            </div>
-
-            <div class="input-group input-group-outline mb-3">
-              <label class="form-label"></label>
-              <input type="text" id="website" name="website" th:field="${employee.phone_number}"
-                     th:value="${employee.getPhone_number()()}"
-                     class="form-control">
-            </div>
-            <div class="text-center">
-              <button type="submit" class="btn bg-gradient-success 40 my-4 mb-2">Edit</button>
-              <button type="reset" class="btn bg-gradient-faded-danger 40 my-4 mb-2">Reset</button>
-            </div>
-          </form>
-        </div>
-      </div>
     </div>
-  </div>
 </div>
 
-
-</div>
-<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
 
