--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -3,27 +3,33 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/login.css"/>
+    <link rel="stylesheet" href="/css/login.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="css/nucleo-svg.css" rel="stylesheet"/>
-    <link ref="stylesheet" href="/css/cards.css">
+    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
+    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
 <div class="row">
     <div class="col card-deck ml-5 my-3" th:if="${!employee.isEmpty()}">
         <div class="card">
-            <div class="container-sm">
-                <h3 class="card-text" th:text="${employee.getName()} + ' ' + ${employee.getSurname()}"></h3>
-                <p class="card-text" th:text="${employee.getEmail()}"></p>
-                <p class="card-text" th:text="${employee.getPhone_number()}"></p>
+            <div class="card2">
+                <h3 class="card-text" th:text="${employee.get().getName()} + ' ' + ${employee.get().getSurname()}"></h3>
+                <p class="card-text" th:text="${employee.get().getEmail()}"></p>
+                <p class="card-text" th:text="${employee.get().getPhone_number()}"></p>
             </div>
+        </div>
+        <div>
+            <a class="active" th:with="companyId=${employee.get().getCompany().getId()}"
+               th:href="@{'/companies/'+${companyId}+'/employees/'+${employeeId}+'/edit'}">Edit</a>
+            <a class="btn-danger" th:with="companyId=${employee.get().getCompany().getId()}"
+               th:href="@{'/companies/'+${companyId}+'/employees/'+${employeeId}+'/delete'}">Delete</a>
         </div>
     </div>
 </div>
