--- a/src/main/resources/templates/employees.html
+++ b/src/main/resources/templates/employees.html
@@ -1,50 +1,42 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="/static/css/login.css"/>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-  <link rel="stylesheet" type="text/css"
-        href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-  <link href="/css/nucleo-icons.css" rel="stylesheet"/>
-  <link href="/css/nucleo-svg.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="/css/cards.css">
-  <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-  <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
-<!--  <link rel="stylesheet" href="/css/cards.css">-->
-  <title></title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<!--    <link rel="stylesheet" href="/css/login.css"/>-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" type="text/css"
+          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
+    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="/css/cards.css">
+    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
+    <title>
+        Employees
+    </title>
 </head>
-<body>
-
-<div th:replace="fragments/header :: header"></div>
+<div th:replace="/fragments/header :: header"></div>
+<body th:if="${!employees.isEmpty()}" th:each="employee : ${employees}">
 
 <div class="container">
-  <div class="row">
-    <div class="col card-deck ml-5 my-3" style="color: gray" th:if="${!employees.isEmpty()}">
-      <div class="card" th:each="employee : ${employees}">
-        <div class="card2">
-          <div>
-            <a class="active" th:href="@{'/companies/'+${companyId}+'/employees/'+${employee.getId()}}"
-               th:text="${employee.getName()}" style="color: darkblue"></a>
-          </div>
-          <p class="card-text" th:text="${employee.getEmail()}"></p>
-          <p class="card-text" th:text="${employee.getPhone_number()}"></p>
-          <div>
-            <a class="active" th:href="@{'/companies/'+${employee.getCompany().getId()}+'/employees/'+${employee.getId()}+'edit'}"
-               th:text="Employees" style="color: darkblue"></a>
-          </div>
+        <div class="card">
+            <div class="card__body">
+                <div class="card-text">
+                    <a class="active"
+                       th:href="@{'/companies/'+${employee.getCompany().getId()}+'/employees/'+${employee.getId()}}"
+                       th:text="${employee.getName()}"></a>
+                </div>
+                <p class="card-text" th:text="${employee.getEmail()}"></p>
+                <p class="card-text" th:text="${employee.getPhone_number()}"></p>
+            </div>
+            <div>
+                <a class="btn btn-success" th:href="@{'companies/'+${employee.getCompany().getId()}+'/employees/'+${employee.getId()}+'/edit'}">Edit</a>
+                <a class="btn btn-danger" th:href="@{'companies/'+${employee.getCompany().getId()}+'/employees/'+${employee.getId()}+'/delete'}">Edit</a>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
-
 </body>
-
-<div th:replace="fragments/footer :: footer">
-</div>
-
 </html>
+
