--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,38 +1,79 @@
 <!DOCTYPE HTML>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
-      xmlns:position="http://www.w3.org/1999/xhtml">
-
-<head th:fragment="header-css">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/4.1.0/css/bootstrap.min.css/}"/>
+    <link rel="stylesheet" type="text/css"
+          href="/css/header2.scss">
     <link rel="stylesheet" type="text/css"
           th:href="@{/webjars/font-awesome/5.0.10/web-fonts-with-css/css/fontawesome-all.min.css}"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-
     <title th:text="Company-Employee CRM"></title>
 </head>
-
 <body>
 <div th:fragment="header">
-    <nav class="navbar navbar-expand-md navbar-bg-gradient-info bg-gradient-info">
-        <a class="active" href="/home"><i class="fa fa-fw fa-home" style="position:relative; left:25px; color: white"></i></a>
-        <div class="collapse navbar-collapse w-100 order-1 order-md-0 dual-collapse2" id="navbarNavAltMarkup" >
-            <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item" style="position:relative; left:45px;" >
-                        <a href="/companies" th:text="Companies" style="color: white"></a>
-                    </li>
-                    <li class="nav-item" style="position: relative; left:85px;">
-                        <a class="active" th:href="@{/login}" th:text="Admin" style="color: white"></a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+    <div class="back"></div>
+    <nav>
+        <a style="position: relative; left: 5%"  href="http://localhost:8089/home">Home</a>
+        <a style="position: relative; left: 10%" href="http://localhost:8089/login">Login</a>
+        <a style="position: relative; left: 15%" href="http://localhost:8089/companies">Companies</a>
+        <a style="position: relative; left: 20%" href="http://localhost:8089/about">About</a>
+        <a style="position: relative; left: 25%"  href="http://localhost:8089/contacts">Contacts</a>
     </nav>
-</div>
 
+</div>
 </body>
 
 </html>
+
+<!--   <!DOCTYPE HTML>-->
+<!--<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" lang="en">-->
+<!--<head>-->
+<!--    <meta charset="UTF-8">-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+<!--    <link rel="stylesheet" type="text/css"-->
+<!--          href="/css/header.css">-->
+<!--    <link rel="stylesheet" type="text/css"-->
+<!--          th:href="@{/webjars/font-awesome/5.0.10/web-fonts-with-css/css/fontawesome-all.min.css}"/>-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"-->
+<!--          integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">-->
+<!--    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">-->
+<!--    <title th:text="Company-Employee CRM"></title>-->
+<!--</head>-->
+<!--<body>-->
+<!--<div th:fragment="header" style="position:relative; top: 0 ">-->
+<!--    &lt;!&ndash;    <row>&ndash;&gt;-->
+<!--    &lt;!&ndash;        <nav class="navbar navbar-expand-lg navbar-color" style="background-color: black">&ndash;&gt;-->
+<!--    &lt;!&ndash;            <div class="collapse navbar-collapse w-100 order-1 order-md-0 dual-collapse2" id="navbarNavAltMarkup">&ndash;&gt;-->
+<!--    &lt;!&ndash;                <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">&ndash;&gt;-->
+<!--&lt;!&ndash;    class="navbar-nav ml-auto"&ndash;&gt;-->
+<!--        <ul>-->
+<!--            <li class="nav-item" style="position: relative; left: 5%">-->
+<!--                <a href="/home" th:text="Home" style="color: white"></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item" style="position:relative; left:10%;">-->
+<!--                <a href="/companies" th:text="Companies" style="color: white"></a>-->
+<!--            </li>-->
+<!--            <li class="nav-item" style="position: relative; left:15%;">-->
+<!--                <a class="active" th:href="@{/login}" th:text="Login" style="color: white"></a>-->
+<!--            </li>-->
+<!--        </ul>-->
+<!--    &lt;!&ndash;                </div>&ndash;&gt;-->
+<!--    &lt;!&ndash;            </div>&ndash;&gt;-->
+<!--    &lt;!&ndash;        </nav>&ndash;&gt;-->
+<!--    &lt;!&ndash;    </row>&ndash;&gt;-->
+
+<!--</div>-->
+
+<!--<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"-->
+<!--        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"-->
+<!--        crossorigin="anonymous"></script>-->
+<!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"-->
+<!--        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"-->
+<!--        crossorigin="anonymous"></script>-->
+
+<!--</body>-->
+
+<!--</html>-->
