--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/static/css/login.css"/>
+    <link rel="stylesheet" href="/css/login.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="css/nucleo-svg.css" rel="stylesheet"/>
+    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
+    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="css/material-kit.css?v=3.0.2" rel="stylesheet"/>
+    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body style="background-color: white">
 <div th:replace="fragments/header_login :: header"></div>
@@ -25,40 +25,29 @@
                     </div>
                 </div>
                 <div class="card-body">
-                    <form th:action="@{/login}" method="post" role="form" class="text-start">
+                    <form th:action="@{/login}" method="post" role="form" class="form" style="position: center">
 
                         <div th:if="${param.error}" class="text-danger font-weight-bold">
                             Invalid Email/Password
                         </div>
-
 
                         <div class="input-group input-group-outline my-3">
                             <label class="form-label"></label>
                             <input type="text" id="login" name="login" class="form-control">
                         </div>
 
-
-                        <div class="input-group input-group-outline mb-3">
+                        <div class="input-group input-group-outline my-3">
                             <label class="form-label"></label>
                             <input type="password" id="entry" name="entry" class="form-control">
                         </div>
-
-
-                        <div class="form-check form-switch d-flex align-items-center mb-3">
-                            <input class="form-check-input" type="checkbox" id="rememberMe">
-                            <label class="form-check-label mb-0 ms-2" for="rememberMe">Remember me</label>
-                        </div>
-
 
                         <div class="text-center">
                             <button type="submit" class="btn bg-gradient-success w-100 my-4 mb-2">Login</button>
                         </div>
 
-
                         <p class="mt-4 text-sm text-center">
                             Not an admin? <a href="home.html">Home page</a><br>
                         </p>
-
 
                     </form>
                 </div>
@@ -66,6 +55,5 @@
         </div>
     </div>
 </div>
-<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
