--- a/src/main/resources/templates/companies.html
+++ b/src/main/resources/templates/companies.html
@@ -17,32 +17,34 @@
         All Companies
     </title>
 </head>
-<body>
-<div th:replace="fragments/header :: header"></div>
+<!--<body>-->
+<!--<div th:replace="fragments/header :: header"></div>-->
 
-<div class="container" th:if="${!companies.isEmpty()}" th:each="company : ${companies}">
-    <div class="card">
-        <div class="card__body">
-            <div class="card-text">
-                <a class="active" th:href="@{'/companies/'+ ${company.getId()}}"
-                   th:text="${company.getName()}"></a>
-            </div>
-            <p class="card-text" th:text="${company.getEmail()}"></p>
-            <p class="card-text" th:text="${company.getWebsite()}"></p>
-            <div class="card-text">
-                <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}"
-                   th:text="Employees" style="color: black"></a>
-            </div>
-        </div>
-    </div>
-</div>
-<!--            <div th:if="${page.total() > 0}" class="pagination"-->
-<!--                 th:each="pageNumber : ${numberOfPages}">-->
-<!--                <a th:href="@{/companies(page=${pageNumber},size=${10})}"-->
-<!--                   th:text=${pageNumber}-->
-<!--                   th:class="${pageNumber==page.number() + 1} ? active"></a>-->
+<!--<div class="container" th:if="${!companies.isEmpty()}" th:each="company:${companies}">-->
+<!--    <div class="card">-->
+<!--        <div class="card__body">-->
+<!--            <div class="card-text">-->
+<!--                <h3>-->
+<!--                    <a class="active" th:href="@{'/companies/'+ ${company.getId()}}"-->
+<!--                       th:text="${company.getName()}"></a>-->
+<!--                </h3>-->
 <!--            </div>-->
-</body>
+<!--            <p class="card-text" th:text="${'Email: '+company.getEmail()}"></p>-->
+<!--            <p class="card-text" th:text="${'Website:'+company.getWebsite()}"></p>-->
+<!--            &lt;!&ndash;            <div class="card-text">&ndash;&gt;-->
+<!--            &lt;!&ndash;                <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}"&ndash;&gt;-->
+<!--            &lt;!&ndash;                   th:text="Employees" style="color: black"></a>&ndash;&gt;-->
+<!--            &lt;!&ndash;            </div>&ndash;&gt;-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--&lt;!&ndash;            <div th:if="${page.total() > 0}" class="pagination"&ndash;&gt;-->
+<!--&lt;!&ndash;                 th:each="pageNumber : ${numberOfPages}">&ndash;&gt;-->
+<!--&lt;!&ndash;                <a th:href="@{/companies(page=${pageNumber},size=${10})}"&ndash;&gt;-->
+<!--&lt;!&ndash;                   th:text=${pageNumber}&ndash;&gt;-->
+<!--&lt;!&ndash;                   th:class="${pageNumber==page.number() + 1} ? active"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;            </div>&ndash;&gt;-->
+<!--</body>-->
 
 
-</html>
+<!--</html>-->
