--- a/src/main/resources/templates/add_company.html
+++ b/src/main/resources/templates/add_company.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/login.css"/>
     <title>
         Company Employee CRM Log in Form
     </title>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
@@ -41,7 +37,8 @@
                                         <div class="input-group input-group-static mb-3">
                                             <div class="form-group">
                                                 <label>name <span class="text-danger">*</span></label>
-                                                <input type="text" th:field="*{company.name}" class="form-control input-lg"
+                                                <input type="text" th:field="*{company.name}"
+                                                       class="form-control input-lg"
                                                        title="name" required/>
                                             </div>
                                         </div>
