--- a/src/main/resources/templates/companies.html
+++ b/src/main/resources/templates/companies.html
@@ -3,48 +3,30 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/login.css"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="stylesheet" type="text/css"
-          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/cards.css">
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
     <title>
         All Companies
     </title>
 </head>
-<!--<body>-->
-<!--<div th:replace="fragments/header :: header"></div>-->
+<div th:replace="fragments/header :: header"></div>
 
-<!--<div class="container" th:if="${!companies.isEmpty()}" th:each="company:${companies}">-->
-<!--    <div class="card">-->
-<!--        <div class="card__body">-->
-<!--            <div class="card-text">-->
-<!--                <h3>-->
-<!--                    <a class="active" th:href="@{'/companies/'+ ${company.getId()}}"-->
-<!--                       th:text="${company.getName()}"></a>-->
-<!--                </h3>-->
-<!--            </div>-->
-<!--            <p class="card-text" th:text="${'Email: '+company.getEmail()}"></p>-->
-<!--            <p class="card-text" th:text="${'Website:'+company.getWebsite()}"></p>-->
-<!--            &lt;!&ndash;            <div class="card-text">&ndash;&gt;-->
-<!--            &lt;!&ndash;                <a class="active" th:href="@{'/companies/'+ ${company.getId()} + '/employees/'}"&ndash;&gt;-->
-<!--            &lt;!&ndash;                   th:text="Employees" style="color: black"></a>&ndash;&gt;-->
-<!--            &lt;!&ndash;            </div>&ndash;&gt;-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
-<!--&lt;!&ndash;            <div th:if="${page.total() > 0}" class="pagination"&ndash;&gt;-->
-<!--&lt;!&ndash;                 th:each="pageNumber : ${numberOfPages}">&ndash;&gt;-->
-<!--&lt;!&ndash;                <a th:href="@{/companies(page=${pageNumber},size=${10})}"&ndash;&gt;-->
-<!--&lt;!&ndash;                   th:text=${pageNumber}&ndash;&gt;-->
-<!--&lt;!&ndash;                   th:class="${pageNumber==page.number() + 1} ? active"></a>&ndash;&gt;-->
-<!--&lt;!&ndash;            </div>&ndash;&gt;-->
-<!--</body>-->
-
-
-<!--</html>-->
+<body th:if="${!companies.isEmpty()}">
+<div class="row">
+    <div class="container" th:each="company :${companies}" style="gap: 15px">
+        <div class="column">
+            <div class="card">
+                <div class="card__body">
+                    <div class="card-text">
+                        <h3>
+                            <a class="link" th:href="@{'/companies/'+ ${company.getId()}}"
+                               th:text="${company.getName()}" style="color: black"></a>
+                        </h3>
+                    </div>
+                    <p class="card-text" th:text="${'Email: '+company.getEmail()}"></p>
+                    <p class="card-text" th:text="${'Website: '+company.getWebsite()}"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
