--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -3,48 +3,44 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="/css/login.css"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <link rel="stylesheet" type="text/css"
           href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>
-    <link href="/css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="/css/nucleo-svg.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
-    <link id="pagestyle" href="/css/material-kit.css?v=3.0.2" rel="stylesheet"/>
     <title>Company</title>
 </head>
 <body>
 <div th:replace="fragments/header :: header"></div>
-    <div class="container"  th:if="${!company.isEmpty()}">
+    <div class="container"  th:if="${!company.isEmpty()}" style="position:relative; top: -30%">
         <div class="card">
             <div class="card__body">
                 <div class="card-text">
                     <h3 th:text="${company.get().getName()}"></h3>
                 </div>
-                <p class="card-text" th:text="${'Email'+company.get().getEmail()}"></p>
-                <p class="card-text" th:text="${'Website'+company.get().getWebsite()}"></p>
+                <p class="card-text" th:text="${'Email: '+company.get().getEmail()}"></p>
+                <p class="card-text" th:text="${'Website: '+company.get().getWebsite()}"></p>
                 <div class="card-text">
-                    <a class="active" th:href="@{'/companies/'+ ${company.get().getId()} + '/employees/'}"
+                    <a class="active" th:href="@{'/companies/'+${company.get().getId()}+'/employees'}"
                        th:text="Employees" style="color: black"></a>
                 </div>
                 <div class="text-center">
                     <div>
-                        <a class="btn btn-success"
+                        <a class="btn-success"
                            th:text="'Add Employee'"
                            th:href="@{'/companies/'+${company.get().getId()}+'/employee/add'}">
                         </a>
                     </div>
 
                     <div>
-                        <a class="btn btn-danger"
+                        <a class="btn-danger"
                            th:href="@{'/companies/'+${company.get().getId()}+'/delete'}">Delete
                         </a>
                     </div>
 
                     <div>
-                        <a class="btn btn-dark"
+                        <a class="btn-dark"
                            th:href="@{'/companies/'+${company.get().getId()}+'/edit'}">Edit
                         </a>
                     </div>
@@ -52,7 +48,6 @@
                 </div>
             </div>
         </div>
-    </div>
 </div>
 </body>
 </html>
