--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -16,11 +16,11 @@
 <div th:fragment="header">
     <div class="back"></div>
     <nav>
-        <a style="position: relative; left: 5%"  href="http://localhost:8089/home">Home</a>
-        <a style="position: relative; left: 10%" href="http://localhost:8089/login">Login</a>
-        <a style="position: relative; left: 15%" href="http://localhost:8089/companies">Companies</a>
-        <a style="position: relative; left: 20%" href="http://localhost:8089/about">About</a>
-        <a style="position: relative; left: 25%"  href="http://localhost:8089/contacts">Contacts</a>
+        <a style="color: black; position: relative; left: 5%"   href="http://localhost:8089/home">Home</a>
+        <a style="color: black; position: relative; left: 10%" href="http://localhost:8089/login">Login</a>
+        <a style="color: black; position: relative; left: 15%" href="http://localhost:8089/companies">Companies</a>
+        <a style="color: black; position: relative; left: 20%" href="http://localhost:8089/about">About</a>
+        <a style="color: black; position: relative; left: 25%"  href="http://localhost:8089/contacts">Contacts</a>
     </nav>
 
 </div>
