--- a/src/main/resources/static/css/header2.scss
+++ b/src/main/resources/static/css/header2.scss
@@ -14,10 +14,15 @@
   transform:translateX(-50%);
   bottom: 15px;
 }
+//.header{
+//  position: absolute;
+//  top: 0;
+//}
+
 nav{
   width: 100%;
-  position: fixed;
-  top:50px;
+  position: absolute;
+  top: 0;
   text-align:center;
 }
 nav a{
