--- a/src/main/resources/templates/employee.html
+++ b/src/main/resources/templates/employee.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -9,25 +9,75 @@
     <link rel="stylesheet" href="/css/cards.css">
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
+    <link href="/css/button.css" rel="stylesheet">
+    <link href="/css/cards.css" rel="stylesheet">
+    <title>Company</title>
 </head>
-<body>
+<body style="width: 400px;">
 <div th:replace="fragments/header :: header"></div>
-<div class="container" th:if="${!employee.isEmpty()}">
-        <div class="card">
-            <div class="card2">
-                <h3 class="card-text" th:text="${employee.get().getName()} + ' ' + ${employee.get().getSurname()}"></h3>
-                <p class="card-text" th:text="' '"></p>
-                <p class="card-text" th:text="${'Email: '+employee.get().getEmail()}"></p>
-                <p class="card-text" th:text="${'Phone: '+employee.get().getPhone_number()}"></p>
+<div class="container" th:if="${!employee.isEmpty()}"
+     style="position:relative; top: -15%; width: 400px">
+    <div class="card" style="width: 600px; height: 300px">
+        <div class="card__body">
+            <div class="row">
+                <h1 th:text="${employee.get().getName()}+' '+${employee.get().getSurname()}"></h1>
             </div>
-            <div>
-                <a class="btn btn-success" th:with="companyId=${employee.get().getCompany().getId()}"
-                   th:href="@{'/companies/'+${companyId}+'/employees/'+${employeeId}+'/edit'}">Edit</a>
-                <a class="btn btn-danger" th:with="companyId=${employee.get().getCompany().getId()}"
-                   th:href="@{'/companies/'+${companyId}+'/employees/'+${employeeId}+'/delete'}">Delete</a>
+            <div class="row">
+                <div class="column" style="width: 100%; position: relative; left: -22%">
+                    <h4 class="card-text" th:text="${'Email: '+employee.get().getEmail()}"></h4>
+                </div>
+            </div>
+            <div class="row">
+                <div class="column" style="width: 100%; position: relative; left: -30%">
+                    <h4 class="card-text" th:text="${'Phone: '+employee.get().getPhone_number()}"></h4>
+                </div>
             </div>
         </div>
+        <div class="row">
+            <a class="button-delete"
+               th:href="@{'/companies/'+${employee.get().getCompany().getId()}+'/employees/'+${employee.get().getId()}+'/delete'}">Delete
+            </a>
 
+            <a class="button-edit"
+               th:href="@{'/companies/'+${employee.get().getCompany().getId()}+'/employees/'+${employee.get().getId()}+'/edit'}">Edit
+            </a>
+        </div>
     </div>
+</div>
+
 </body>
+
 </html>
+<!--<!DOCTYPE html>-->
+<!--<html lang="en">-->
+<!--<head>-->
+<!--    <meta charset="utf-8"/>-->
+<!--    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">-->
+<!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">-->
+<!--    <link rel="stylesheet" type="text/css"-->
+<!--          href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700"/>-->
+<!--    <link rel="stylesheet" href="/css/cards.css">-->
+<!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
+<!--    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">-->
+<!--</head>-->
+<!--<body>-->
+<!--<div th:replace="fragments/header :: header"></div>-->
+<!--<div class="container" th:if="${!employee.isEmpty()}">-->
+<!--        <div class="card">-->
+<!--            <div class="card2">-->
+<!--                <h3 class="card-text" th:text="${employee.get().getName()} + ' ' + ${employee.get().getSurname()}"></h3>-->
+<!--                <p class="card-text" th:text="' '"></p>-->
+<!--                <p class="card-text" th:text="${'Email: '+employee.get().getEmail()}"></p>-->
+<!--                <p class="card-text" th:text="${'Phone: '+employee.get().getPhone_number()}"></p>-->
+<!--            </div>-->
+<!--            <div>-->
+<!--                <a class="btn btn-success" th:with="companyId=${employee.get().getCompany().getId()}"-->
+<!--                   th:href="@{'/companies/'+${companyId}+'/employees/'+${employeeId}+'/edit'}">Edit</a>-->
+<!--                <a class="btn btn-danger" th:with="companyId=${employee.get().getCompany().getId()}"-->
+<!--                   th:href="@{'/companies/'+${companyId}+'/employees/'+${employeeId}+'/delete'}">Delete</a>-->
+<!--            </div>-->
+<!--        </div>-->
+
+<!--    </div>-->
+<!--</body>-->
+<!--</html>-->
