--- a/src/main/resources/static/css/header2.scss
+++ b/src/main/resources/static/css/header2.scss
@@ -14,10 +14,10 @@
   transform:translateX(-50%);
   bottom: 15px;
 }
-//.header{
-//  position: absolute;
-//  top: 0;
-//}
+.header{
+  position: absolute;
+  top: 0;
+}
 
 nav{
   width: 100%;
