--- a/src/main/resources/templates/edit_company.html
+++ b/src/main/resources/templates/edit_company.html
@@ -10,16 +10,15 @@
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Round" rel="stylesheet">
     <link href="/css/forms.css" rel="stylesheet">
+    <link href="/css/button.css" rel="stylesheet">
     <title>
         Edit page
     </title>
 </head>
-
 <body>
-<div th:replace="fragments/header :: header" style="position: absolute; top: 0;"></div>
-
-<div class="row">
-    <div class="form" style="position: relative; left: 300px">
+<div th:replace="fragments/header :: header"></div>
+<div class="row" style="position: relative; left: 35%; top: 15%">
+    <div class="form" th:object="${company}">
         <div class="title">Edit</div>
         <div class="input-container ic1">
             <input id="firstname" class="input" type="text" placeholder=" "/>
@@ -42,9 +41,6 @@
 </body>
 
 
-
-
-<!--<body style="background-color: white">-->
 <!--<div class="container" style="position:relative; left: 40%; top:0;">-->
 <!--    <div class="row">-->
 <!--        <div class="col-lg-4 col-md-8 col-12 mx-auto">-->
@@ -92,8 +88,11 @@
 <!--        </div>-->
 <!--    </div>-->
 <!--</div>-->
+
+
+<!--<body style="background-color: white">-->
 <!--&lt;!&ndash;<div th:replace="fragments/footer :: footer"></div>&ndash;&gt;-->
 <!--</body>-->
-<!--</html>-->
+</html>
 
 
